--- a/scripts/tv/switch.yaml
+++ b/scripts/tv/switch.yaml
@@ -1,17 +1,26 @@
 'tv_turn_on_switch':
   alias: TV Nintendo Switch
   sequence:
-  - service: scene.turn_on
-    data: 
-      entity_id: scene.tele
+
+  # - service: scene.turn_on
+  #   data: 
+  #     entity_id: scene.tele
+
+  # Engegar la tele
   - service: media_player.turn_on
     data: 
       entity_id: media_player.tele
+
+  # Espera a que la tele estigui encesa
   - wait_template: "{{ is_state('media_player.tele', 'on') }}"
+
+  # Sel·lecciona el canal Nintendo Switch
   - service: media_player.select_source
     data: 
       entity_id: media_player.tele
       source: 'Nintendo Switch'
+
+  # Regula el volum
   - service: media_player.volume_mute
     data:
       entity_id: media_player.tele
@@ -19,4 +28,4 @@
   - service: media_player.volume_set
     data:
       entity_id: media_player.tele
-      volume_level: 0.13
+      volume_level: 0.09
