--- a/lovelace/views/60_clean.yaml
+++ b/lovelace/views/60_clean.yaml
@@ -85,6 +85,47 @@ cards:
                   margin-right: 5px;
                 }
 
+          - type: conditional
+            conditions:
+              - entity: input_boolean.work_focus
+                state: "on"
+            card:
+              type: markdown
+              content: |
+                ### Mode concentració: **Activat**
+                Si us plau, no entreu al despatx.
+              style: |
+                ha-card {
+                  text-align: center;
+                  margin-left: 5px;
+                  margin-right: 5px;
+                  background-color: #A81419;
+                  color: #ffffff;
+                }
+                h3 {
+                  font-weight: 400 !important;
+                  margin: 0px;
+                }
+                p {
+                  font-weight: 300 !important;
+                  margin: 0px;
+                }
+
+          # - type: 'custom:button-text-card'
+          #   large: true
+          #   entity: input_boolean.work_focus
+          #   title: Mode concentració activat
+          #   background_color: '#A81419'
+          #   font_color: '#fff'
+          #   icon: 'mdi:door-open'
+          #   style: |
+          #     ha-card {
+          #       padding: 0px;
+          #     }
+            # hide_condition: |
+              # [[[ input_boolean.work_focus === "off" ]]]
+
+
 
       - type: custom:layout-card
         layout: vertical
@@ -579,5 +620,38 @@ cards:
                         name: false
                         icon: "mdi:clock-outline"
                         state_color: true
+                        tap_action:
+                          action: toggle
+
+
+          ##################
+          ##    ALTRES    ##
+          ##################
+
+          - type: vertical-stack
+            cards:
+              - template: title_h2
+                type: "custom:decluttering-card"
+                variables:
+                  - title: Altres
+
+              - type: entities
+                show_header_toggle: false
+                style: |
+                  ha-card {
+                    margin-left: 5px;
+                    margin-right: 5px;
+                  }
+                entities:
+                  - entity: input_boolean.work_focus
+                    name: Feina - Mode focus
+                    show_state: false
+                    icon: "mdi:briefcase"
+                    type: "custom:multiple-entity-row"
+                    entities:
+                      - entity: input_boolean.work_focus
+                        name: false
+                        state_color: true
+                        icon: "mdi:power-standby"
                         tap_action:
                           action: toggle
