--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 www/community
 .virtualenv
 google-home-serviceaccount.json
-alexa_media.alemurbcn@gmail.com
+alexa_media.alemurbcn@gmail.com.pickle
 
 # Created by https://www.gitignore.io/api/homeassistant
 # Edit at https://www.gitignore.io/?templates=homeassistant
