--- a/lovelace/views/60_clean.yaml
+++ b/lovelace/views/60_clean.yaml
@@ -4,133 +4,17 @@ path: home
 badges: []
 panel: true
 cards:
+
   - type: vertical-stack
     cards:
+
+      - template: area_overview
+        type: "custom:decluttering-card"  
+
       - type: custom:layout-card
-        layout: horizontal
+        layout: vertical
         min_columns: 1
         max_columns: 2
-        cards:
-          # - type: conditional
-          #   conditions:
-          #     - entity: sensor.time
-          #       state: 
-          - template: title_h1
-            type: "custom:decluttering-card"
-            variables:
-              - title: Bon dia
-          - type: markdown
-            content: " "
-            style: |
-              ha-card {
-                background: rgba(0,0,0,0);
-                box-shadow: none;
-                height: 0px;
-              }
-
-      - type: custom:layout-card
-        layout: vertical
-        min_columns: 1
-        max_columns: 1
-        cards:
-          - type: custom:simple-weather-card
-            entity: weather.dark_sky
-            name: "Horta (Barcelona)"
-            backdrop: true
-            style: |
-              ha-card {
-                margin-left: 5px;
-                margin-right: 5px;
-              }
-
-          - type: conditional
-            conditions:
-              - entity: media_player.tele
-                state_not: "off"
-            card:
-              type: "custom:mini-media-player"
-              entity: media_player.tele
-              icon: 'mdi:television-classic'
-              artwork: cover
-              name: Televisor menjador
-              hide:
-                volume: true
-                source: false
-                progress: true
-                power_state: true
-                controls: true
-              style: |
-                ha-card {
-                  margin-left: 5px;
-                  margin-right: 5px;
-                }
-
-          - type: conditional
-            conditions:
-              - entity: media_player.spotify_aleix_murtra
-                state_not: "idle"
-            card:
-              type: custom:mini-media-player
-              entity: media_player.spotify_aleix_murtra
-              icon: mdi:spotify
-              artwork: cover
-              hide:
-                volume: true
-                source: true
-                progress: true
-                power_state: true
-              style: |
-                ha-card {
-                  margin-left: 5px;
-                  margin-right: 5px;
-                }
-
-          - type: conditional
-            conditions:
-              - entity: input_boolean.work_focus
-                state: "on"
-            card:
-              type: markdown
-              content: |
-                ### Mode concentració: **Activat**
-                Si us plau, no entreu al despatx.
-              style: |
-                ha-card {
-                  text-align: center;
-                  margin-left: 5px;
-                  margin-right: 5px;
-                  background-color: #A81419;
-                  color: #ffffff;
-                }
-                h3 {
-                  font-weight: 400 !important;
-                  margin: 0px;
-                }
-                p {
-                  font-weight: 300 !important;
-                  margin: 0px;
-                }
-
-          # - type: 'custom:button-text-card'
-          #   large: true
-          #   entity: input_boolean.work_focus
-          #   title: Mode concentració activat
-          #   background_color: '#A81419'
-          #   font_color: '#fff'
-          #   icon: 'mdi:door-open'
-          #   style: |
-          #     ha-card {
-          #       padding: 0px;
-          #     }
-            # hide_condition: |
-              # [[[ input_boolean.work_focus === "off" ]]]
-
-
-
-      - type: custom:layout-card
-        layout: vertical
-        min_columns: 1
-        max_columns: 3
         cards:
 
 
@@ -434,195 +318,6 @@ cards:
                     icon: "mdi:window-closed"
                   - entity: binary_sensor.window_bedroom 
                     icon: "mdi:window-closed"
-
-          - break
-
-          ##################
-          ##  ASPIRADOR   ##
-          ##################
-          - type: vertical-stack
-            cards:
-              - template: title_h2
-                type: "custom:decluttering-card"
-                variables:
-                  - title: Aspirador
-
-              - type: entities
-                show_header_toggle: false
-                style: |
-                  ha-card {
-                    margin-left: 5px;
-                    margin-right: 5px;
-                  }
-                entities:
-                  - entity: input_boolean.vacuum_enable_mon
-                    name: Control
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_boolean.vacuum_enable_turbo_mon
-                        name: false
-                        icon: "mdi:fan"
-                        tap_action:
-                          action: call-service
-                          service: shell_command.aspirador_turbo
-                      - entity: input_boolean.vacuum_enable_turbo_mon
-                        name: false
-                        icon: "mdi:flash-off"
-                        tap_action:
-                          action: call-service
-                          service: shell_command.aspirador_off
-                      - entity: input_boolean.vacuum_enable_turbo_mon
-                        name: false
-                        icon: "mdi:flash"
-                        tap_action:
-                          action: call-service
-                          service: shell_command.aspirador_on
-
-                  - type: section
-
-                  - entity: input_boolean.vacuum_enable_mon
-                    name: Dilluns
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_datetime.vacuum_schedule_time_mon
-                        name: false
-                      - entity: input_boolean.vacuum_enable_turbo_mon
-                        name: false
-                        icon: "mdi:fan"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                      - entity: input_boolean.vacuum_enable_mon
-                        name: false
-                        icon: "mdi:clock-outline"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                  - entity: input_boolean.vacuum_enable_tue
-                    name: Dimarts
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_datetime.vacuum_schedule_time_tue
-                        name: false
-                      - entity: input_boolean.vacuum_enable_turbo_tue
-                        name: false
-                        icon: "mdi:fan"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                      - entity: input_boolean.vacuum_enable_tue
-                        name: false
-                        icon: "mdi:clock-outline"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                  - entity: input_boolean.vacuum_enable_wed
-                    name: Dimecres
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_datetime.vacuum_schedule_time_wed
-                        name: false
-                      - entity: input_boolean.vacuum_enable_turbo_wed
-                        name: false
-                        icon: "mdi:fan"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                      - entity: input_boolean.vacuum_enable_wed
-                        name: false
-                        icon: "mdi:clock-outline"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                  - entity: input_boolean.vacuum_enable_thu
-                    name: Dijous
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_datetime.vacuum_schedule_time_thu
-                        name: false
-                      - entity: input_boolean.vacuum_enable_turbo_thu
-                        name: false
-                        icon: "mdi:fan"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                      - entity: input_boolean.vacuum_enable_thu
-                        name: false
-                        icon: "mdi:clock-outline"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                  - entity: input_boolean.vacuum_enable_fri
-                    name: Divendres
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_datetime.vacuum_schedule_time_fri
-                        name: false
-                      - entity: input_boolean.vacuum_enable_turbo_fri
-                        name: false
-                        icon: "mdi:fan"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                      - entity: input_boolean.vacuum_enable_fri
-                        name: false
-                        icon: "mdi:clock-outline"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                  - entity: input_boolean.vacuum_enable_sat
-                    name: Dissabte
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_datetime.vacuum_schedule_time_sat
-                        name: false
-                      - entity: input_boolean.vacuum_enable_turbo_sat
-                        name: false
-                        icon: "mdi:fan"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                      - entity: input_boolean.vacuum_enable_sat
-                        name: false
-                        icon: "mdi:clock-outline"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                  - entity: input_boolean.vacuum_enable_sun
-                    name: Diumenge
-                    show_state: false
-                    icon: "mdi:robot-vacuum"
-                    type: "custom:multiple-entity-row"
-                    entities:
-                      - entity: input_datetime.vacuum_schedule_time_sun
-                        name: false
-                      - entity: input_boolean.vacuum_enable_turbo_sun
-                        name: false
-                        icon: "mdi:fan"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-                      - entity: input_boolean.vacuum_enable_sun
-                        name: false
-                        icon: "mdi:clock-outline"
-                        state_color: true
-                        tap_action:
-                          action: toggle
-
 
           ##################
           ##    ALTRES    ##
