--- a/automations/vacuum/start_vacuum.yaml
+++ b/automations/vacuum/start_vacuum.yaml
@@ -2,71 +2,48 @@ alias: 'Start vacuum'
 initial_state: true
 trigger:
   - platform: template
-    value_template: "{{ states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_mon', 'timestamp') | int | timestamp_custom('%H:%M', True)) }}"
+    value_template: |
+      {{ 
+        (states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_mon', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 0 and states('input_boolean.vacuum_enable_mon') == "on")
+      }}
   - platform: template
-    value_template: "{{ states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_tue', 'timestamp') | int | timestamp_custom('%H:%M', True)) }}"
+    value_template: |
+      {{ 
+        (states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_tue', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 1 and states('input_boolean.vacuum_enable_tue') == "on")
+      }}
   - platform: template
-    value_template: "{{ states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_wed', 'timestamp') | int | timestamp_custom('%H:%M', True)) }}"
+    value_template: |
+      {{ 
+        (states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_wed', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 2 and states('input_boolean.vacuum_enable_wed') == "on")
+      }}
   - platform: template
-    value_template: "{{ states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_thu', 'timestamp') | int | timestamp_custom('%H:%M', True)) }}"
+    value_template: |
+      {{ 
+        (states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_thu', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 3 and states('input_boolean.vacuum_enable_thu') == "on")
+      }}
   - platform: template
-    value_template: "{{ states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_fri', 'timestamp') | int | timestamp_custom('%H:%M', True)) }}"
+    value_template: |
+      {{ 
+        (states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_fri', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 4 and states('input_boolean.vacuum_enable_fri') == "on")
+      }}
   - platform: template
-    value_template: "{{ states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_sat', 'timestamp') | int | timestamp_custom('%H:%M', True)) }}"
+    value_template: |
+      {{ 
+        (states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_sat', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 5 and states('input_boolean.vacuum_enable_sat') == "on")
+      }}
   - platform: template
-    value_template: "{{ states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_sun', 'timestamp') | int | timestamp_custom('%H:%M', True)) }}"
+    value_template: |
+      {{ 
+        (states('sensor.time') == (state_attr('input_datetime.vacuum_schedule_time_sun', 'timestamp') | int | timestamp_custom('%H:%M', False)))
+        and (now().weekday() == 6 and states('input_boolean.vacuum_enable_sun') == "on")
+      }}
 condition:
-  condition: or
-  conditions:
-    - condition: and
-      conditions:
-        - condition: time
-          weekday: mon
-        - condition: state
-          entity_id: input_boolean.vacuum_enable_mon
-          state: 'on'
-    - condition: and
-      conditions:
-        - condition: time
-          weekday: tue
-        - condition: state
-          entity_id: input_boolean.vacuum_enable_tue
-          state: 'on'
-    - condition: and
-      conditions:
-        - condition: time
-          weekday: wed
-        - condition: state
-          entity_id: input_boolean.vacuum_enable_wed
-          state: 'on'
-    - condition: and
-      conditions:
-        - condition: time
-          weekday: thu
-        - condition: state
-          entity_id: input_boolean.vacuum_enable_thu
-          state: 'on'
-    - condition: and
-      conditions:
-        - condition: time
-          weekday: fri
-        - condition: state
-          entity_id: input_boolean.vacuum_enable_fri
-          state: 'on'
-    - condition: and
-      conditions:
-        - condition: time
-          weekday: sat
-        - condition: state
-          entity_id: input_boolean.vacuum_enable_sat
-          state: 'on'
-    - condition: and
-      conditions:
-        - condition: time
-          weekday: sun
-        - condition: state
-          entity_id: input_boolean.vacuum_enable_sun
-          state: 'on'
 action:
   # Start vacuum
   - service: shell_command.aspirador_on
