--- a/themes/google_light_theme/google_light_theme.yaml
+++ b/themes/google_light_theme/google_light_theme.yaml
@@ -53,7 +53,7 @@ Google Light Theme:
   # Switches
   switch-checked-button-color: "#5F9BEA"
   switch-checked-track-color: "#75a2f0"
-  switch-unchecked-button-color: "#5F6267"
+  switch-unchecked-button-color: "#5F6267" 
   switch-unchecked-track-color: "#888b91"
   # Toggles
   paper-toggle-button-checked-button-color: var(--switch-checked-button-color)
@@ -64,3 +64,5 @@ Google Light Theme:
   table-row-background-color: var(--primary-background-color)
   table-row-alternative-background-color: var(--secondary-background-color)
   data-table-background-color: var(--primary-background-color)
+  # Tabs
+  paper-tabs-selection-bar-color: "#424242"
