--- a/automations/sunset/sunset_tele.yaml
+++ b/automations/sunset/sunset_tele.yaml
@@ -7,6 +7,9 @@ trigger:
 condition:
   condition: and
   conditions:
+    - condition: state
+      entity_id: light.mesita
+      state: 'off'
     - condition: or
       conditions:
         - condition: state
