--- a/configuration.yaml
+++ b/configuration.yaml
@@ -174,6 +174,12 @@ binary_sensor:
 
 browser_mod:
 
+calendar:
+  - platform: caldav
+    url: !secret calendar_capside_holidays
+  - platform: caldav
+    url: !secret calendar_capside_oncall
+
 # Devices
 
 xiaomi_aqara:
