--- a/devices/sensors.yaml
+++ b/devices/sensors.yaml
@@ -250,6 +250,15 @@
         {% else %}
         100
         {% endif %}
+    moment_dia:
+      friendly_name: Moment del dia
+      value_template: |
+        {%- if as_timestamp(now()) | timestamp_custom('%H') | int < 7 -%}Matinada
+        {%- elif as_timestamp(now()) | timestamp_custom('%H') | int < 12 -%}Matí
+        {%- elif as_timestamp(now()) | timestamp_custom('%H') | int < 14 -%}Migdia
+        {%- elif as_timestamp(now()) | timestamp_custom('%H') | int < 20 -%}Tarda
+        {%- elif as_timestamp(now()) | timestamp_custom('%H') | int < 22 -%}Vespre
+        {%- else -%}Nit{%- endif -%}
 
 ###############
 # SQL Queries #
