--- a/configuration.yaml
+++ b/configuration.yaml
@@ -168,17 +168,24 @@ speedtestdotnet:
 
 map:
 
-binary_sensor:
-  - platform: uptimerobot
-    api_key: !secret uptimerobot_api_key
-
 browser_mod:
 
+# o365:
+#   client_secret: !secret o365_client_secret
+#   client_id: !secret o365_client_id
+
 calendar:
-  - platform: caldav
-    url: !secret calendar_capside_holidays
-  - platform: caldav
-    url: !secret calendar_capside_oncall
+  - platform: ics
+    calendars:
+      - name: CAPSiDE Holidays
+        url: !secret calendar_capside_holidays
+        includeAllDay: true
+      - name: CAPSiDE Oncall
+        url: !secret calendar_capside_oncall
+        includeAllDay: true
+      - name: FCBarcelona matches
+        url: !secret calendar_fcbarcelona
+        includeAllDay: true
 
 # Devices
 
@@ -226,6 +233,7 @@ remote:
 light: !include devices/lights.yaml
 switch: !include devices/switches.yaml
 sensor: !include devices/sensors.yaml
+binary_sensor: !include devices/binary_sensors.yaml
 camera: !include devices/cameras.yaml
 climate: !include devices/climates.yaml
 media_player: !include devices/media_players.yaml
