--- a/lovelace/decluttering_templates/nest_button.yaml
+++ b/lovelace/decluttering_templates/nest_button.yaml
@@ -13,7 +13,7 @@ card:
   style: |
     ha-card {
       font-family: Roboto, 'Open Sans', sans-serif;
-      padding-top: 15px !important;
+      /* padding-top: 15px !important; */
       background-color: rgba(0, 0, 0, 0);
       -webkit-box-shadow: none;
       -moz-box-shadow: none;
@@ -26,7 +26,7 @@ card:
       width: 100%;
     }
     #img-cell {
-      background-color: #F5F5F5;
+      background-color: [[background]];
       border-radius: 50px;
       height: 50px !important;
       width: 50px !important;
@@ -37,9 +37,15 @@ card:
     #label {
       font-size: 70%;
     }
+    #name {
+      margin-top:5px;
+      font-size: [[title-font-size]];
+    }
 default:
   - show_state: true
   - show_name: false
   - show_last_changed: true
+  - background: "#F5F5F5"
+  - title-font-size: "1.2rem"
   - tap_action:
       action: toggle
